qtsensors-opensource-src (5.2.1+dfsg-2) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Use dh_auto_test for running tests.
  * Build documentation packages.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 23 Feb 2014 20:38:45 +0400

qtsensors-opensource-src (5.2.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 16 Feb 2014 18:33:42 -0300

qtsensors-opensource-src (5.2.0+dfsg-3) unstable; urgency=medium

  * Upload to unstable.
  * Move mkspec files to their new location.
    - B-D on qtbase5-private-dev 5.2.0+dfsg-7 which changed the location.
  * Update Standards-Version to 3.9.5, no changes required.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 31 Jan 2014 20:45:12 -0300

qtsensors-opensource-src (5.2.0+dfsg-2) experimental; urgency=low

  [ Dmitry Shachnev ]
  * Fix typo in the previous changelog entry.
  * Install libqtsensors_linuxsys.so only on Linux.

  [ Pino Toscano ]
  * Do not install the private qmake stuff.
  * Remove the Pre-Depends on dpkg >= 1.15.6~, since that version is available
    in Squeeze already.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Move mkspec files to their new location.
    - B-D on qtbase5-private-dev 5.2.0+dfsg-7 which changed the location.
  * Update Standards-Version to 3.9.5, no changes required.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 26 Dec 2013 15:18:42 -0300

qtsensors-opensource-src (5.2.0+dfsg-1) experimental; urgency=low

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update libqt5sensors5.symbols.
  * Bump qtbase and qtdeclarative build-dependencies to 5.2.0.
  * Make Vcs-Browser field canonical by dropping useless attribute.
  * Run tests during build.
  * Explicitly define DEB_HOST_MULTIARCH in debian/rules.
  * Use my correct email for Uploaders field.

  [ Lisandro Damián Nicanor Pérez Meyer ]