@@ -67,6 +67,11 @@ override_dh_install:
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
 
+override_dh_auto_clean:
+	dh_auto_clean
+	rm -rf doc/qtsensors doc/qtsensors.qch
+	rm -f examples/sensors/grue/detect_grue
+
 override_dh_clean:
 	dh_clean
 
